<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/fragment_background"
        android:layout_weight="1">
        <EditText
            android:id="@+id/edClientName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/enter_name"
            android:layout_margin="@dimen/s16"
            android:inputType="text"/>
        <EditText
            android:id="@+id/edClientFamily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edClientName"
            android:layout_marginRight="@dimen/s16"
            android:layout_marginEnd="@dimen/s16"
            android:layout_marginStart="@dimen/s16"
            android:layout_marginTop="@dimen/s16"
            android:hint="@string/enter_family"
            android:inputType="text"/>
        <EditText
            android:id="@+id/edClientPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edClientFamily"
            android:layout_marginRight="@dimen/s16"
            android:layout_marginEnd="@dimen/s16"
            android:layout_marginStart="@dimen/s16"
            android:layout_marginTop="@dimen/s16"
            android:hint="@string/phone_number"
            android:inputType="phone"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListBookOrder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/edClientPhone"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/s16"
            android:layout_marginEnd="@dimen/s16"
            android:layout_marginLeft="@dimen/s16"
            android:layout_marginStart="@dimen/s16"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginRight="@dimen/s16"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/s8">
        <TextView
            android:id="@+id/tvTotalSummaryOrder"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/total_summary"
            android:gravity="center"
            android:textSize="@dimen/s16"
            android:layout_marginLeft="@dimen/s16"
            android:layout_marginStart="@dimen/s16"
            tools:ignore="SpUsage"
            android:layout_weight="2"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirmOrder"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        android:layout_marginBottom="0dp"
        android:text="@string/confirm"
        android:layout_weight="1"
        android:textAllCaps="false"
        android:enabled="false"
        android:layout_marginLeft="@dimen/s16"
        android:layout_marginStart="@dimen/s16"
        android:layout_marginRight="@dimen/s16"
        android:layout_marginEnd="@dimen/s16"
        android:background="@drawable/button_background"/>
    </LinearLayout>
</LinearLayout>
</layout>